--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Contato - Barbearia Alura</title>
+    <title>Contato - Salão de Beleza Alura</title>
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="img/logo.png" alt="Logo da Barbearia Alura"></h1>
+            <h1><img src="img/logo.png" alt="Logo do Salão de Beleza Alura"></h1>
 
             <nav>
                 <ul>
@@ -30,13 +30,15 @@
             <input type="text" id="nomesobrenome" class="input-padrao" required>
 
             <label for="email">Email</label>
-            <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
+            <input type="email" id="email" class="input-padrao" required placeholder="tec.salao@email.com">
 
             <label for="telefone">Telefone</label>
-            <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
+            <input type="tel" id="telefone" class="input-padrao" required placeholder="(41) 98765-4321">
 
             <label for="mensagem">Mensagem</label>
-            <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
+            <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required
+                placeholder="Fale um pouco sobre o que deseja (corte, coloração, tratamento, etc.)"></textarea>
+
 
             <fieldset>
                 <legend>Como prefere o nosso contato?</legend>
