--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Contato - Salão de Beleza Alura</title>
+    <title>Contato - Salão TEC</title>
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="img/logo.png" alt="Logo do Salão de Beleza Alura"></h1>
+            <h1><img src="img/logo.png" alt="Logo do TEC"></h1>
 
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="produtos.html">Serviços</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
@@ -100,8 +100,8 @@
     </main>
 
     <footer>
-        <img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2025</p>
+        <img src="img/logo-branco.png" alt="Logo da Salao TEC">
+        <p class="copyright">&copy; Salao TEC - 2025</p>
     </footer>
 </body>
 
