--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style-home.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Barbearia Alura</title>
+	<title>Salao TEC</title>
 </head>
 
 <body>
 	<header>
 		<div class="caixa">
-			<h1 class="logo"> <img class="titulo-principal" src="img/logo.png"> Barbearia Alura </h1>
+			<h1 class="logo"> <img class="titulo-principal" src="img/logo.png"> Salao TEC </h1>
 
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="produtos.html">Produtos</a></li>
+					<li><a href="produtos.html">Serviços</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
-	<img class="banner" src="img/banner.jpg">
+	<img class="banner" src="img/banner.jpeg" alt="Banner do salao">
 
 	<main>
 		<p> qualquer conteudo que gostaria de escrever</p>
 
 		<section class="principal">
-			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+			<h2 class="titulo-principal">Sobre a Salao TEC</h2>
 
 			<img src="img/utensilios.jpg" alt="Utensilios de um barbeiro" class="utensilios">
 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
-				para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+			<p>Localizada no coração da cidade a <strong>Salao TEC</strong> traz para o mercado o que há de melhor
+				para o seu cabelo e barba. Fundada em 2019, a Salao TEC já é destaque na cidade e conquista novos
 				clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
@@ -84,7 +84,7 @@
 	</main>
 	<footer>
 		<img src="img/logo-branco.png">
-		<p class="copyright">&copy; Copyright Barbearia Alura - 2025</p>
+		<p class="copyright">&copy; Copyright Salao TEC - 2025</p>
 	</footer>
 </body>
 
