--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Produtos - Barbearia Alura</title>
+    <title>Serviços - Salao TEC</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,30 +23,30 @@
         </div>
     </header>
     <main>
-        <ul class="produtos">
+        <ul class="Serviços">
             <li>
                 <h2>Cabelo</h2>
                 <img src="img/cabelo.jpg">
-                <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-                <p class="produto-preco">R$ 25,00</p>
+                <p class="Serviços-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                <p class="Serviços-preco">R$ 25,00</p>
             </li>
             <li>
                 <h2>Barba</h2>
                 <img src="img/barba.jpg">
-                <p class="produto-descricao">Corte e desenho profissional de barba</p>
-                <p class="produto-preco">R$ 18,00</p>
+                <p class="Serviços-descricao">Corte e desenho profissional de barba</p>
+                <p class="Serviços-preco">R$ 18,00</p>
             </li>
             <li>
                 <h2>Cabelo + Barba</h2>
                 <img src="img/cabelo+barba.jpg">
-                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
-                <p class="produto-preco">R$ 35,00</p>
+                <p class="Serviços-descricao">Pacote completo de cabelo e barba</p>
+                <p class="Serviços-preco">R$ 35,00</p>
             </li>
         </ul>
     </main>
     <footer>
         <img src="img/logo-branco.png">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2025</p>
+        <p class="copyright">&copy; Copyright Salao TEC - 2025</p>
     </footer>
 </body>
 
