--- a/produtos.html
+++ b/produtos.html
@@ -24,28 +24,28 @@
     </header>
     <main>
         <ul class="Serviços">
-            <li>
-                <h2>Cabelo</h2>
-                <img src="img/cabelo.jpg">
-                <p class="Serviços-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-                <p class="Serviços-preco">R$ 25,00</p>
+          <li>
+                <h2>Corte Feminino</h2>
+                <img src="img/relacionada.jpeg" alt="Corte feminino realizado no salao">
+                <p class="servicos-descricao">Realizamos cortes modernos e clássicos, sempre de acordo com a preferência das clientes.</p>
+                <p class="servicos-preco">R$ 45,00</p>
             </li>
             <li>
-                <h2>Barba</h2>
-                <img src="img/barba.jpg">
-                <p class="Serviços-descricao">Corte e desenho profissional de barba</p>
-                <p class="Serviços-preco">R$ 18,00</p>
+                <h2>Escova</h2>
+                <img src="img/produto 2.jpeg" alt="Escova realizada no salao">
+                <p class="servicos-descricao">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
+                <p class="servicos-preco">R$ 35,00</p>
             </li>
             <li>
-                <h2>Cabelo + Barba</h2>
-                <img src="img/cabelo+barba.jpg">
-                <p class="Serviços-descricao">Pacote completo de cabelo e barba</p>
-                <p class="Serviços-preco">R$ 35,00</p>
+                <h2>Coloração</h2>
+                <img src="img/produto 3.jpeg" alt="Coloração de cabelo">
+                <p class="servicos-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
+                <p class="servicos-preco">R$ 80,00</p>
             </li>
         </ul>
     </main>
     <footer>
-        <img src="img/logo-branco.png">
+        <img src="img/logo.png">
         <p class="copyright">&copy; Copyright Salao TEC - 2025</p>
     </footer>
 </body>
