--- a/contato.html
+++ b/contato.html
@@ -100,7 +100,7 @@
     </main>
 
     <footer>
-        <img src="img/logo-branco.png" alt="Logo da Salao TEC">
+        <img src="img/logo.png" alt="Logo da Salao TEC">
         <p class="copyright">&copy; Salao TEC - 2025</p>
     </footer>
 </body>
