--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Salao TEC</h2>
 
-			<img src="img/utensilios.jpg" alt="Utensilios de um barbeiro" class="utensilios">
+			<img src="img/utensilios.jpg" alt="Utensilios de um cabelereiro" class="utensilios">
 
-			<p>Localizada no coração da cidade a <strong>Salao TEC</strong> traz para o mercado o que há de melhor
-				para o seu cabelo e barba. Fundada em 2019, a Salao TEC já é destaque na cidade e conquista novos
+			<p>Localizada no centro da cidade a <strong>Salao TEC</strong> traz para o mercado o que há de melhor
+				para o seu cabelo e. Fundada em 2025, a Salao TEC já é destaque na cidade e conquista novos
 				clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
@@ -73,8 +73,8 @@
 		</section>
 
 		<section class="mapa">
-			<h3 class="titulo-principal">Nosso estabelecimento</h3>
-			<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+			<h3 class="titulo-principal">Nosso salao</h3>
+			<p>Nosso estabelecimento está localizado no centro da cidade.</p>
 
 			<div class="mapa-conteudo">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="">
@@ -84,7 +84,7 @@
 	</main>
 	<footer>
 		<img src="img/logo-branco.png">
-		<p class="copyright">&copy; Copyright Salao TEC - 2025</p>
+		<p class="copyright">&copy; Copyright Salão TEC - 2025</p>
 	</footer>
 </body>
 
