--- a/contato.html
+++ b/contato.html
@@ -88,7 +88,15 @@
                     <td>8h ~ 20h</td>
                 </tr>
                 <tr>
+                    <td>Terça</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
                     <td>Quarta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Quinta</td>
                     <td>8h ~ 20h</td>
                 </tr>
                 <tr>
