--- a/contato.html
+++ b/contato.html
@@ -108,8 +108,8 @@
     </main>
 
     <footer>
-        <img src="img/logo.png" alt="Logo da Salao TEC">
-        <p class="copyright">&copy; Salao TEC - 2025</p>
+        <img src="img/logo.png" alt="Logo da Salão TEC">
+        <p class="copyright">&copy; Salão TEC - 2025</p>
     </footer>
 </body>
 
