--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style-home.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Salao TEC</title>
+	<title>Salão TEC</title>
 </head>
 
 <body>
 	<header>
 		<div class="caixa">
-			<h1 class="logo"> <img class="titulo-principal" src="img/logo.png"> Salao TEC </h1>
+			<h1 class="logo"> <img class="titulo-principal" src="img/logo.png"> Salão TEC </h1>
 
 			<nav>
 				<ul>
@@ -29,13 +29,13 @@
 			</nav>
 		</div>
 	</header>
-	<img class="banner" src="img/banner.jpeg" alt="Banner do salao">
+	<img class="banner" src="img/banner.jpeg" alt="Banner do salão">
 
 	<main>
 		<p> qualquer conteudo que gostaria de escrever</p>
 
 		<section class="principal">
-			<h2 class="titulo-principal">Sobre a Salao TEC</h2>
+			<h2 class="titulo-principal">Sobre a Salão TEC</h2>
 
 			<img src="img/utensilios.jpg" alt="Utensilios de um cabelereiro" class="utensilios">
 
@@ -73,11 +73,11 @@
 		</section>
 
 		<section class="mapa">
-			<h3 class="titulo-principal">Nosso salao</h3>
+			<h3 class="titulo-principal">Nosso salão</h3>
 			<p>Nosso estabelecimento está localizado no centro da cidade.</p>
 
 			<div class="mapa-conteudo">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14411.614416361394!2d-49.29855849941615!3d-25.441486090868512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce388fe111323%3A0x59abf083edb128f1!2sBatel%2C%20Curitiba%20-%20PR!5e0!3m2!1spt-BR!2sbr!4v1754391707274!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</iframe>
 			</div>
 		</section>
