--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Serviços - Salao TEC</title>
+    <title>Serviços - Salão TEC</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -26,27 +26,27 @@
         <ul class="Serviços">
           <li>
                 <h2>Corte Feminino</h2>
-                <img src="img/relacionada.jpeg" alt="Corte feminino realizado no salao">
-                <p class="servicos-descricao">Realizamos cortes modernos e clássicos, sempre de acordo com a preferência das clientes.</p>
-                <p class="servicos-preco">R$ 45,00</p>
+                <img src="img/relacionada.jpeg" alt="Corte feminino realizado no salão">
+                <p class="serviços-descrição">Realizamos cortes modernos e clássicos, sempre de acordo com a preferência das clientes.</p>
+                <p class="serviços-preço">R$ 45,00</p>
             </li>
             <li>
                 <h2>Escova</h2>
                 <img src="img/produto 2.jpeg" alt="Escova realizada no salao">
-                <p class="servicos-descricao">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
-                <p class="servicos-preco">R$ 35,00</p>
+                <p class="serviços-descrição">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
+                <p class="serviços-preço">R$ 35,00</p>
             </li>
             <li>
                 <h2>Coloração</h2>
                 <img src="img/produto 3.jpeg" alt="Coloração de cabelo">
-                <p class="servicos-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
-                <p class="servicos-preco">R$ 80,00</p>
+                <p class="serviços-descrição">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
+                <p class="serviços-preço">R$ 80,00</p>
             </li>
         </ul>
     </main>
     <footer>
         <img src="img/logo.png">
-        <p class="copyright">&copy; Copyright Salao TEC - 2025</p>
+        <p class="copyright">&copy; Copyright Salão TEC - 2025</p>
     </footer>
 </body>
 
