--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<section class="mapa">
 			<h3 class="titulo-principal">Nosso salão</h3>
-			<p>Nosso estabelecimento está localizado no lado do centro da cidade.</p>
+			<p>Nosso estabelecimento está localizado na região central da cidade.</p>
 
 			<div class="mapa-conteudo">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14411.614416361394!2d-49.29855849941615!3d-25.441486090868512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce388fe111323%3A0x59abf083edb128f1!2sBatel%2C%20Curitiba%20-%20PR!5e0!3m2!1spt-BR!2sbr!4v1754391707274!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
