--- a/produtos.html
+++ b/produtos.html
@@ -32,7 +32,7 @@
             </li>
             <li>
                 <h1>Escova</h1>
-                <img src="img/produto 2.jpeg" alt="Escova realizada no salao">
+                <img src="img/produto 2.jpeg" alt="Escova realizada no salão">
                 <p class="serviços-descrição">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
                 <p class="serviços-preço">R$ 35,00</p>
             </li>
