--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 			<img src="img/utensilios.jpg" alt="Utensilios de um cabelereiro" class="utensilios">
 
-			<p>Localizada no centro da cidade a <strong>Salao TEC</strong> traz para o mercado o que há de melhor
-				para o seu cabelo e. Fundada em 2025, a Salao TEC já é destaque na cidade e conquista novos
+			<p>Localizada no centro da cidade o <strong>Salão TEC</strong> traz para o mercado o que há de melhor
+				para o seu cabelo e. Fundada em 2025, a Salão TEC já é destaque na cidade e conquista novos
 				clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
