alterando catalogo e produtos

--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Serviços - Salão TEC</title>
+    <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -23,32 +23,31 @@
         </div>
     </header>
     <main>
-        <ul class="Serviços">
-          <li>
-                <h1>Corte Feminino</h1>
-                <img src="img/relacionada.jpeg" alt="Corte feminino realizado no salão">
-                <p class="serviços-descrição">Realizamos cortes modernos e clássicos, sempre de acordo com a preferência das clientes.</p>
-                <p class="serviços-preço">R$ 45,00</p>
+        <ul class="produtos">
+            <li>
+                <h2>Corte Feminino</h2>
+                <img src="img/cabelo.jpg">
+                <p class="produto-descricao">Corte feminino realizado no salão</p>
+                <p class="produto-preco">R$ 45,00</p>
             </li>
             <li>
-                <h1>Escova</h1>
-                <img src="img/produto 2.jpeg" alt="Escova realizada no salão">
-                <p class="serviços-descrição">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
-                <p class="serviços-preço">R$ 35,00</p>
+                <h2>Escova</h2>
+                <img src="img/barba.jpg">
+                <p class="produto-descricao">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
+                <p class="produto-preco">R$ 35,00</p>
             </li>
             <li>
-                <h1>Coloração</h1>
-                <img src="img/produto 3.jpeg" alt="Coloração de cabelo">
-                <p class="serviços-descrição">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
-                <p class="serviços-preço">R$ 80,00</p>
+                <h2>Coloração</h2>
+                <img src="img/cabelo+barba.jpg">
+                <p class="produto-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
+                <p class="produto-preco">R$ 80,00</p>
             </li>
         </ul>
     </main>
     <footer>
-        <img src="img/logo.png">
-        <p class="copyright">&copy; Copyright Salão TEC - 2025</p>
+        <img src="img/logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2025</p>
     </footer>
 </body>
-
 
 </html>
