--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	<img class="banner" src="img/banner.jpeg" alt="Banner do salão">
 
 	<main>
-		<p> qualquer conteudo que gostaria de escrever</p>
+		<p> sobre nosso salao </p>
 
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Salão TEC</h2>
 
-			<img src="img/utensilios.jpg" alt="Utensilios de um cabelereiro" class="utensilios">
+			<img src="img/cachos.jfif" alt="Utensilios de um cabelereiro" class="utensilios">
 
 			<p>Localizada no centro da cidade o <strong>Salão TEC</strong> traz para o mercado o que há de melhor
 				para o seu cabelo e. Fundada em 2025, a Salão TEC já é destaque na cidade e conquista novos
@@ -62,7 +62,7 @@
 					<li class="itens">Profissionais Qualificados</li>
 					<li class="itens">Pontualidade</li>
 					<li class="itens">Limpeza</li>
-				</ul><img src="img/beneficios.jpg" class="imagem-beneficios">
+				</ul><img src="img/beneficio.jfif" class="imagem-beneficios">
 			</div>
 
 			<div class="video">
@@ -82,7 +82,7 @@
 		</section>
 	</main>
 	<footer>
-		<img src="img/logo-branco.png">
+		<img src="img/logo.png">
 		<p class="copyright">&copy; Copyright Salão TEC - 2025</p>
 	</footer>
 </body>
