--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 					<li class="itens">Profissionais Qualificados</li>
 					<li class="itens">Pontualidade</li>
 					<li class="itens">Limpeza</li>
-				</ul><img src="img/beneficio.jfif" class="imagem-beneficios">
-			</div>
-
+				div class="img-container">
+    <img src="beneficios.jfif" alt="Corte de cabelo">
+</div>
 			<div class="video">
 				<iframe width="100%" height="315" src="https://youtu.be/snXlge_oxmE?si=ym4OrEmmK01OQuUW" frameborder="0"
 					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
