--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 					<li class="itens">Profissionais Qualificados</li>
 					<li class="itens">Pontualidade</li>
 					<li class="itens">Limpeza</li>
-				div class="img-container">
-    <img src="beneficios.jfif" alt="Corte de cabelo">
-</div>
+					div class="img-container">
+				</ul><img src="img/beneficio.jfif" class="imagem-beneficios">
+			</div>
 			<div class="video">
 				<iframe width="100%" height="315" src="https://youtu.be/snXlge_oxmE?si=ym4OrEmmK01OQuUW" frameborder="0"
 					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -76,7 +76,10 @@
 			<p>Nosso estabelecimento está localizado na região central da cidade.</p>
 
 			<div class="mapa-conteudo">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14411.614416361394!2d-49.29855849941615!3d-25.441486090868512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce388fe111323%3A0x59abf083edb128f1!2sBatel%2C%20Curitiba%20-%20PR!5e0!3m2!1spt-BR!2sbr!4v1754391707274!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14411.614416361394!2d-49.29855849941615!3d-25.441486090868512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce388fe111323%3A0x59abf083edb128f1!2sBatel%2C%20Curitiba%20-%20PR!5e0!3m2!1spt-BR!2sbr!4v1754391707274!5m2!1spt-BR!2sbr"
+					width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+					referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		</section>
 	</main>
