--- a/produtos.html
+++ b/produtos.html
@@ -26,19 +26,19 @@
         <ul class="produtos">
             <li>
                 <h2>Corte Feminino</h2>
-                <img src="img/cabelo.jpg">
+                <img src="img/produto 3.jpeg">
                 <p class="produto-descricao">Corte feminino realizado no salão</p>
                 <p class="produto-preco">R$ 45,00</p>
             </li>
             <li>
                 <h2>Escova</h2>
-                <img src="img/barba.jpg">
+                <img src="img/produto 2.jpeg">
                 <p class="produto-descricao">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
                 <p class="produto-preco">R$ 35,00</p>
             </li>
             <li>
                 <h2>Coloração</h2>
-                <img src="img/cabelo+barba.jpg">
+                <img src="img/produto.jpeg">
                 <p class="produto-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
                 <p class="produto-preco">R$ 80,00</p>
             </li>
