--- a/index.html
+++ b/index.html
@@ -51,25 +51,29 @@
 		</section>
 
 		<section class="beneficios">
-			<h3 class="titulo-principal">Benefícios</h3>
+	<h3 class="titulo-principal">Benefícios</h3>
 
-			<div class="conteudo-beneficios">
-				<ul class="lista-beneficios">
-					<li class="itens">Atendimento aos Clientes</li>
-					<li class="itens">Espaço diferenciado</li>
-					<li class="itens">Localização</li>
-					<li class="itens">Profissionais Qualificados</li>
-					<li class="itens">Pontualidade</li>
-					<li class="itens">Limpeza</li>
-					div class="img-container">
-				</ul><img src="img/beneficio.jfif" class="imagem-beneficios">
-			</div>
-			<div class="video">
-				<iframe width="100%" height="315" src="https://youtu.be/snXlge_oxmE?si=ym4OrEmmK01OQuUW" frameborder="0"
-					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen></iframe>
-			</div>
-		</section>
+	<div class="conteudo-beneficios">
+		<ul class="lista-beneficios">
+			<li class="itens">Atendimento aos Clientes</li>
+			<li class="itens">Espaço diferenciado</li>
+			<li class="itens">Localização</li>
+			<li class="itens">Profissionais Qualificados</li>
+			<li class="itens">Pontualidade</li>
+			<li class="itens">Limpeza</li>
+		</ul>
+		
+		<div class="img-container">
+			<img src="img/beneficio.jfif" class="imagem-beneficios" alt="Benefícios do salão">
+		</div>
+	</div>
+
+	<div class="video">
+		<iframe width="100%" height="315" src="https://youtu.be/snXlge_oxmE?si=ym4OrEmmK01OQuUW" frameborder="0"
+			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
+</section>
+
 
 		<section class="mapa">
 			<h3 class="titulo-principal">Nosso salão</h3>
@@ -88,5 +92,6 @@
 		<p class="copyright">&copy; Copyright Salão TEC - 2025</p>
 	</footer>
 </body>
+
 
 </html>
