--- a/index.html
+++ b/index.html
@@ -50,22 +50,20 @@
 				excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</section>
 
-		<section class="beneficios">
-	<h3 class="titulo-principal">Benefícios</h3>
-
-	<div class="conteudo-beneficios">
-		<ul class="lista-beneficios">
-			<li class="itens">Atendimento aos Clientes</li>
-			<li class="itens">Espaço diferenciado</li>
-			<li class="itens">Localização</li>
-			<li class="itens">Profissionais Qualificados</li>
-			<li class="itens">Pontualidade</li>
-			<li class="itens">Limpeza</li>
-		</ul>
-		
-		<div class="img-container">
-			<img src="img/beneficio.jfif" class="imagem-beneficios" alt="Benefícios do salão">
-		</div>
+	<section class="beneficios">
+    <h2 class="titulo-centralizado">Benefícios</h2>
+    <div class="conteudo-beneficios">
+        <ul class="lista-beneficios">
+            <li><strong>Atendimento aos Clientes</strong></li>
+            <li>Espaço diferenciado</li>
+            <li>Localização</li>
+            <li>Profissionais Qualificados</li>
+            <li>Pontualidade</li>
+            <li>Limpeza</li>
+        </ul>
+        <img src="img/beneficios.jpg" class="imagem-beneficios" alt="Imagem benefícios">
+    </div>
+</section>
 	</div>
 
 	<div class="video">
@@ -95,3 +93,4 @@
 
 
 </html>
+
