--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
 	<main>
 
 		<section class="principal">
+			<div>
+				<img src="img/cachos.jfif" alt="Utensilios de um cabelereiro" class="utensilios">
+
+			</div>
 			<h2 class="titulo-principal">Sobre a Salão TEC</h2>
 
-			<img src="img/cachos.jfif" alt="Utensilios de um cabelereiro" class="utensilios">
 
 			<p>Localizada no centro da cidade o <strong>Salão TEC</strong> traz para o mercado o que há de melhor
 				para o seu cabelo e. Fundada em 2025, a Salão TEC já é destaque na cidade e conquista novos
