--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</div>
 
 		<div class="video">
-			<iframe width="100%" height="315" src="https://youtu.be/snXlge_oxmE?si=ym4OrEmmK01OQuUW" frameborder="0"
+			<iframe width="100%" height="315" src="https://youtu.be/z9ZuQNTnhQk?si=-3jzkm_8TExnIAiU" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 		</div>
