--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<li class="itens">Limpeza</li>
 				</ul>
 
-				<div class="imagembeneficios">
+				<div class="img-container">
 					<img src="img/beneficio.jfif" class="imagem-beneficios" alt="Benefícios do salão">
 				</div>
 		</section>
