--- a/produtos.html
+++ b/produtos.html
@@ -43,11 +43,12 @@
                 <p class="produto-preco">R$ 80,00</p>
             </li>
         </ul>
-    </main>
+      </main>
     <footer>
-        <img src="img/logo-branco.png">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2025</p>
+        <img src="img/logo.png">
+        <p class="copyright">&copy; Copyright salao TEC - 2025</p>
     </footer>
 </body>
+
 
 </html>
