--- a/produtos.html
+++ b/produtos.html
@@ -47,7 +47,7 @@
       </main>
     <footer>
         <img src="img/logo.png">
-        <p class="copyright">&copy; Copyright salao TEC - 2025</p>
+        <p class="copyright">&copy; Copyright salão TEC - 2025</p>
     </footer>
 </body>
 
