--- a/contato.html
+++ b/contato.html
@@ -109,7 +109,7 @@
 
     <footer>
         <img src="img/logo.png" alt="Logo da Salão TEC">
-        <p class="copyright">&copy; Copyright Salão TEC - 2025</p>
+        <p class="copyright">&copy; @Copyright Salão TEC - 2025</p>
     </footer>
 </body>
 
