--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </main>
     <footer>
         <img src="img/logo.png"> 
-        <p class="copyright">&copy; Copyright salão TEC - 2025</p>
+        <p class="copyright">&copy; @Copyright salão TEC - 2025</p>
     </footer>
 </body>
 
