--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</div>
 
 		<div class="video">
-			<iframe width="100%" height="315" src="https://youtu.be/z9ZuQNTnhQk?si=-3jzkm_8TExnIAiU" frameborder="0"allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+			<iframe width="100" height="315" src="https://www.youtube.com/embed/ivwDDY8uH-s?si=e1ep4SrT3pTtXiVh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 				allowfullscreen></iframe>
 				
 		</div>
