--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<section class="principal">
 			<div>
-				<h2 class="titulo-principal">Sobre a Salão TEC</h2>
+				<h2 class="titulo-inicial">Sobre a Salão TEC</h2>
 
 				<img src="img/cachos.jfif" alt="Utensilios de um cabelereiro" class="utensilios">
 
