--- a/produtos.html
+++ b/produtos.html
@@ -39,6 +39,7 @@
             </li>
             <li>
                 <h2>Coloração</h2>
+                <p class="creme"></p>
                 <img src="img/produto.jpeg">
                 <p class="produto-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
                 <p class="produto-preco">R$ 80,00</p>
