--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 		<div class="caixa">
-			<h1 class="logo"> <img class="titulo-principal" src="img/logo.png"> Salão TEC </h1>
+			<h1 class="logo"> <img class="titulo-principal" src="img/logo.png"> <p class= nome-empresa Salão TEC </h1>
 
 			<nav>
 				<ul>
