--- a/produtos.html
+++ b/produtos.html
@@ -26,23 +26,30 @@
     <main>
         <ul class="produtos">
             <li>
-                <h2>Corte Feminino</h2>
-                <img src="img/produto 3.jpeg">
-                <p class="produto-descricao">Corte feminino realizado no salão</p>
-                <p class="produto-preco">R$ 45,00</p>
+                 <div class="card-produto">
+                    <h2>Corte Feminino</h2>
+                    <img class="imagem-produto" src="img/produto 3.jpeg">
+                    <p class="produto-descricao">Corte feminino realizado no salão</p>
+                    <p class="produto-preco">R$ 45,00</p>
+                </div>
             </li>
             <li>
-                <h2>Escova</h2>
-                <img src="img/produto 2.jpeg">
-                <p class="produto-descricao">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
-                <p class="produto-preco">R$ 35,00</p>
+                <h2>Escova</h2> 
+                  <div class="card-produto">
+                    <h2>Locação completa</h2>
+                    <img class="imagem-produto" src="img/produto 2.jpeg">
+                    <p class="produto-descricao">Oferecemos escovas lisas, modeladas e volumosas que garantiram resultados incríveis.</p>
+                    <p class="produto-preco">R$ 35,00</p>
+                </div> 
             </li>
             <li>
-                <h2>Coloração</h2>
-                <p class="creme"></p>
-                <img src="img/produto.jpeg">
-                <p class="produto-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
-                <p class="produto-preco">R$ 80,00</p>
+                  <div class="card-produto">
+                    <h2>Coloração</h2>
+                      <p class="creme"></p>
+                    <img class="imagem-produto" src="img/produto.jpeg">
+                    <p class="produto-descricao">Trabalhamos com colorações de alta qualidade, que proporcionaram cores vibrantes e duradouras.</p>
+                    <p class="produto-preco">R$ 80,00</p>
+                </div>
             </li>
         </ul>
       </main>
